# revolt-second-life-battery-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dashboard/: app.py
data/: sample_household_profile.csv
docs/: data_management_strategy.md  interview_guide_zh_en.md  model_assumptions.md  project_overview_zh_en.md  supply_chain_strategy.md  technical_blog.md
revolt_simulator/: __init__.py  __main__.py  config.py  profiles.py  simulator.py
tests/: test_simulator.py
